# securechain

./: .replit  QUICK_START.md  README.md  replit.nix
SecureChain/: CONTRIBUTING.md  Cargo.toml  QUICK_USAGE.md  README.md  audit.sh  quick_fuzz.sh  quick_scan.sh  quick_start.sh  run_test.sh  setup.sh  test_contract.sol  test_usage.md
SecureChain/attached_assets/: Perfect3r proj_1751914566334.docx
SecureChain/config/: default.toml
SecureChain/examples/: basic_usage.rs
SecureChain/src/: main.rs  main_old.rs  main_simple.rs
SecureChain/src/cli/: commands.rs  mod.rs
SecureChain/src/core/: ai_assist.rs  analyzer.rs  fetcher.rs  fuzz_engine.rs  mod.rs  parser.rs
SecureChain/src/plugins/: cairo.rs  evm.rs  ink.rs  mod.rs  move_lang.rs
SecureChain/src/report/: generator.rs  mod.rs  vulnerability.rs
SecureChain/src/utils/: config.rs  error.rs  mod.rs  simple_config.rs
SecureChain/test_contracts/: defi_liquidity_pool.sol  vulnerable_sample.sol
attached_assets/: Pasted--Compiling-openssl-sys-v0-9-109-warning-openssl-sys-0-9-109-Could-not-find-directory-of-OpenSSL-1751925030174_1751925030176.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-Building--1751925545972_1751925545974.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-error-E0432-unresolved-impor-1751919887915_1751919887918.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-error-E0433-failed-to-resolve--1751920944967_1751920944969.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-field-plugin-manager-1751920554744_1751920554746.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-import-crate-1751920787369_1751920787371.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-import-std--1751920159785_1751920159786.txt  Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-imports-Cli--1751920457895_1751920457897.txt  Pasted-Compiling-scopeguard-v1-2-0-warning-openssl-sys-0-9-109-Could-not-find-directory-of-OpenSSL-insta-1751924364559_1751924364561.txt  Pasted-Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-import-commands-1751920253547_1751920253549.txt  Pasted-cargo-install-path-Installing-securechain-v1-0-0-home-gh0stcybers3c-securechain-SecureChain-1751924119945_1751924119949.txt  Pasted-warning-unused-import-crate-core-ai-assist-AIAssistant-src-cli-commands-rs-1-5-1--1751925735798_1751925735801.txt
