[package]
name = "bugforgex"
version = "0.1.0"
edition = "2021"
authors = ["BugForgeX Team"]
description = "Universal Web3 Smart Contract Security Auditor"
license = "MIT"
repository = "https://github.com/bugforgex/bugforgex"
readme = "README.md"
keywords = ["security", "blockchain", "web3", "audit", "smart-contracts"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "bugforgex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
home = "0.5"
dirs = "5.0"
regex = "1.10"
url = "2.5"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
futures = "0.3"
walkdir = "2.4"
tempfile = "3.8"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
tui = "0.19"
crossterm = "0.27"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
