
[package]
name = "securechain"
version = "1.0.0"
edition = "2021"
description = "Universal Web3 Smart Contract Security Auditor with AI-powered vulnerability detection"
authors = ["SecureChain Team <security@securechain.dev>"]
license = "MIT"
repository = "https://github.com/securechain/securechain"
documentation = "https://docs.securechain.dev"
readme = "README.md"
keywords = ["blockchain", "security", "audit", "smart-contracts", "web3"]
categories = ["command-line-utilities", "development-tools", "cryptography"]

[[bin]]
name = "securechain"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
toml = "0.8"
env_logger = "0.10"
log = "0.4"

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# File operations
tempfile = "3.0"
walkdir = "2.0"

# Async utilities
futures = "0.3"

# Regex for parsing
regex = "1.0"

# Base64 for encoding
base64 = "0.21"

# Error handling
thiserror = "1.0"

# URL encoding
urlencoding = "2.1"

# Directory utilities
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["full"]
full = ["ai", "fuzzing", "reporting"]
ai = []
fuzzing = []
reporting = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
